# google-meet-demo

./: .gitignore  README.md  justfile  pyproject.toml
src/google_meet_demo/: __init__.py  google_meet.py  main.py  quickstart.py  quickstart_calendar.py
src/google_meet_demo/quickstart/: calendar.py  meeting.py
src/google_meet_demo/router/: auth.py
