[project]
name = "google-meet-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "minta.chiu", email = "minta.chu@labbase.co.jp" }
]
dependencies = [
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.155.0",
    "fastapi[all]>=0.115.6",
    "google-apps-meet>=0.1.11",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/google_meet_demo"]

[tool.rye.scripts]
quickstart_calendar = { cmd = ["python", "-m", "google_meet_demo.quickstart_calendar"] }
quickstart = { cmd = ["python", "-m", "google_meet_demo.quickstart"] }
dev = { cmd = ["uvicorn", "google_meet_demo.main:api", "--port", "8000", "--reload"] }